--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,31 @@
       "args": [
         "--version"
       ],
+    },
+    {
+      "name": "Debug (With Telemetry): prm set puppet 7",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceFolder}",
+      "args": [
+        "set",
+        "puppet",
+        "7"
+      ],
+      "buildFlags": "-tags='telemetry' -ldflags='-X main.honeycomb_api_key=${input:honeycomb_api_key} -X main.honeycomb_dataset=pct_dev'",
+    },
+    {
+      "name": "Debug (No Telemetry): prm set puppet 7",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceFolder}",
+      "args": [
+        "set",
+        "puppet",
+        "7"
+      ],
     }
   ],
   "inputs": [
