--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,6 +49,29 @@
         "puppet",
         "7"
       ],
+    },
+    {
+      "name": "Debug (With Telemetry): prm get puppet",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceFolder}",
+      "args": [
+        "get",
+        "puppet",
+      ],
+      "buildFlags": "-tags='telemetry' -ldflags='-X main.honeycomb_api_key=${input:honeycomb_api_key} -X main.honeycomb_dataset=pct_dev'",
+    },
+    {
+      "name": "Debug (No Telemetry): prm get puppet",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceFolder}",
+      "args": [
+        "get",
+        "puppet",
+      ],
     }
   ],
   "inputs": [
