--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,13 +19,13 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      # -
-      #   name: Checkout PCT Templates
-      #   uses: actions/checkout@v2
-      #   with:
-      #     repository: puppetlabs/baker-round
-      #     fetch-depth: 1
-      #     path: templates
+      -
+        name: Checkout vendored PRM Tools
+        uses: actions/checkout@v2
+        with:
+          repository: puppetlabs/fantastic-adventure
+          fetch-depth: 1
+          path: tools
       -
         name: Set up Go
         uses: actions/setup-go@v2
