(MAINT) Updated PRM Honeycomb dataset
In this commit the dataset used to store PRM usage data has been changed.

Previously, PCT and PRM usage data was being stored in the same dataset
on Honeycomb. This commit will make sure PRM usage data is stored in a
separate dataset.

--- a/.github/workflows/acceptance.yml
+++ b/.github/workflows/acceptance.yml
@@ -37,7 +37,7 @@ jobs:
       if: runner.os != 'Windows'
       env:
         HONEYCOMB_API_KEY: ${{ secrets.HONEYCOMB_API_KEY_DEV }}
-        HONEYCOMB_DATASET: pct_dev
+        HONEYCOMB_DATASET_PRM: prm_dev
     - name: Build Windows
       run: |
         go install github.com/goreleaser/goreleaser@latest
@@ -45,6 +45,6 @@ jobs:
       if: runner.os == 'Windows'
       env:
         HONEYCOMB_API_KEY: ${{ secrets.HONEYCOMB_API_KEY_DEV }}
-        HONEYCOMB_DATASET: pct_dev
+        HONEYCOMB_DATASET_PRM: prm_dev
     - name: Test
       run: go test -v ./acceptance/...
