--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,4 +40,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           HONEYCOMB_API_KEY: ${{ secrets.HONEYCOMB_API_KEY_PROD }}
-          HONEYCOMB_DATASET: pct
+          HONEYCOMB_DATASET_PRM: prm
