--- a/.github/workflows/codequality.yml
+++ b/.github/workflows/codequality.yml
@@ -10,18 +10,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v1
-      - name: Run Gosec Security Scanner
-        uses: securego/gosec@master
-        with:
-          args: '-exclude-dir=testutils ./...'
+        uses: actions/checkout@v3
       - name: Snyk Scan for vulnerabilities in dependencies
         uses: snyk/actions/golang@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_FOSS_KEY }}
         with:
           command: monitor
-  format:
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ env.go_version }}
+      - run: |
+          go install github.com/securego/gosec/v2/cmd/gosec@v2.12.0
+          gosec -exclude-dir=testutils  -exclude-dir=pkg/mock ./...
+ format:
     name: fmt, makes sure there are no formatting issues
     runs-on: ubuntu-latest
     steps:
@@ -50,4 +53,18 @@ jobs:
         uses: actions/checkout@v1
       -
         name: Run go mod tidy
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v1
+      - name: Run Gosec Security Scanner
+        uses: securego/gosec@master
+        with:
+          args: '-exclude-dir=testutils ./...'
+      - name: Snyk Scan for vulnerabilities in dependencies
+        uses: snyk/actions/golang@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_FOSS_KEY }}
+        with:
+          command: monitor
         run: make tidy
